--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "firebase-admin": "^11.10.1",
     "mongodb": "^5.8.1",
     "mongoose": "^7.4.5",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "peer": "^1.0.0",
+    "socket.io": "^4.7.1",
+    "uuid": "^9.0.0",
+    "ejs": "^3.1.9"
   }
 }
