--- a/package.json
+++ b/package.json
@@ -12,15 +12,17 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "firebase-admin": "^11.10.1",
     "mongodb": "^5.8.1",
     "mongoose": "^7.4.5",
     "nodemon": "^3.0.1",
     "peer": "^1.0.0",
+    "razorpay": "^2.9.4",
     "socket.io": "^4.7.1",
-    "uuid": "^9.0.0",
-    "ejs": "^3.1.9"
+    "uuid": "^9.0.0"
   }
 }
